Not going to use bootstrap with this

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/styles.css">
   <title>Fizzlestix Kitchen & Bar</title>
 </head>
 <body>
-  <nav class="flex items-center justify-evenly flex-wrap p-8">
-    <div class="flex items-center">
-      <img src="./assets/Fizzlestix-Logo.jpeg" alt="Fizzlestix logo" class="h-11  w-20/>
+  <nav>
+    <div>
+      <img src="./assets/Fizzlestix-Logo.jpeg" class="mainLogo" alt="Fizzlestix logo" />
     </div>
   </nav>
+
 </body>
 </html>
