Working on this website

--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
   <title>Fizzlestix Kitchen & Bar</title>
 </head>
 <body>
-  <nav>
+  <header>
     <div>
       <img src="./assets/Fizzlestix-Logo.jpeg" class="mainLogo" alt="Fizzlestix logo" />
     </div>
-  </nav>
+    <nav>
+      <ul>
+        <li><a href="#">Our Menu</a></li>
+        <li><a href="#">Order Online</a></li>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Testimonials</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">News</a></li>
+      </ul>
+    </nav>
+  </header>
 
 </body>
 </html>
